[gd_scene load_steps=5 format=3 uid="uid://bmjb6vea3bnlu"]

[ext_resource type="PackedScene" uid="uid://cyhpvnx2iwkky" path="res://blends/enviorment/structures/floors/circlething.blend" id="1_rgi73"]
[ext_resource type="Script" path="res://circlething.gd" id="2_5m3yn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g6m0q"]
cull_mode = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2gf7o"]
data = PackedVector3Array(-0.171719, 0, 0.171719, -0.20192, 0.128681, 0.134919, -0.20192, 0, 0.134919, -0.171719, 0, 0.171719, -0.171719, 0.128681, 0.171719, -0.20192, 0.128681, 0.134919, 0.980785, 0.128681, 0.19509, 0.238181, 0.128681, 0.0473772, 0.242847, 0.128681, 0, 0.0929336, 0, 0.224362, 0.55557, 0.128681, 0.83147, 0.55557, 0, 0.83147, 0.0929336, 0, 0.224362, 0.0929336, 0.128681, 0.224362, 0.55557, 0.128681, 0.83147, -0.238181, 0, -0.0473772, -1, 0.128681, 0, -1, 0, 0, -0.238181, 0, -0.0473772, -0.238181, 0.128681, -0.0473772, -1, 0.128681, 0, -0.238181, 0, 0.0473772, -1, 0, 0, -0.242847, 0, 0, -1, 0, 0, -0.92388, 0, 0.382683, -0.980785, 0, 0.19509, -0.92388, 0, 0.382683, -0.707107, 0, 0.707107, -0.83147, 0, 0.55557, -0.707107, 0, 0.707107, -0.224362, 0, 0.0929336, -0.20192, 0, 0.134919, -0.224362, 0, 0.0929336, -1, 0, 0, -0.238181, 0, 0.0473772, -1, 0, 0, -0.707107, 0, 0.707107, -0.92388, 0, 0.382683, -1, 0, 0, -0.224362, 0, 0.0929336, -0.707107, 0, 0.707107, -0.0929336, 0, -0.224362, -0.19509, 0.128681, -0.980785, -0.19509, 0, -0.980785, -0.0929336, 0, -0.224362, -0.0929336, 0.128681, -0.224362, -0.19509, 0.128681, -0.980785, -0.171719, 0, -0.171719, -0.19509, 0, -0.980785, -0.134919, 0, -0.20192, -0.19509, 0, -0.980785, -0.55557, 0, -0.83147, -0.382683, 0, -0.92388, -0.55557, 0, -0.83147, -0.83147, 0, -0.55557, -0.707107, 0, -0.707107, -0.83147, 0, -0.55557, -0.19509, 0, -0.980785, -0.171719, 0, -0.171719, -0.19509, 0, -0.980785, -0.83147, 0, -0.55557, -0.55557, 0, -0.83147, 0.0929336, 0, -0.224362, 0.19509, 0.128681, -0.980785, 0.19509, 0, -0.980785, 0.0929336, 0, -0.224362, 0.0929336, 0.128681, -0.224362, 0.19509, 0.128681, -0.980785, 0.19509, 0, -0.980785, 0.134919, 0, -0.20192, 0.0929336, 0, -0.224362, 0.171719, 0, -0.171719, 0.707107, 0, -0.707107, 0.20192, 0, -0.134919, 0.19509, 0, -0.980785, 0.171719, 0, -0.171719, 0.134919, 0, -0.20192, 0.55557, 0, -0.83147, 0.19509, 0, -0.980785, 0.382683, 0, -0.92388, 0.171719, 0, -0.171719, 0.55557, 0, -0.83147, 0.707107, 0, -0.707107, 0.171719, 0, -0.171719, 0.19509, 0, -0.980785, 0.55557, 0, -0.83147, 0.980785, 0, 0.19509, 0.242847, 0.128681, 0, 0.242847, 0, 0, 0.980785, 0, 0.19509, 0.980785, 0.128681, 0.19509, 0.242847, 0.128681, 0, -0.0473772, 0, 0.238181, -0.19509, 0.128681, 0.980785, -0.19509, 0, 0.980785, -0.0473772, 0, 0.238181, -0.0473772, 0.128681, 0.238181, -0.19509, 0.128681, 0.980785, 0.171719, 0, 0.171719, 0.55557, 0, 0.83147, 0.134919, 0, 0.20192, 0.55557, 0, 0.83147, 0.83147, 0, 0.55557, 0.707107, 0, 0.707107, 0.83147, 0, 0.55557, 0.980785, 0, 0.19509, 0.92388, 0, 0.382683, 0.980785, 0, 0.19509, 0.224362, 0, 0.0929336, 0.238181, 0, 0.0473772, 0.20192, 0, 0.134919, 0.55557, 0, 0.83147, 0.171719, 0, 0.171719, 0.980785, 0, 0.19509, 0.20192, 0, 0.134919, 0.224362, 0, 0.0929336, 0.55557, 0, 0.83147, 0.980785, 0, 0.19509, 0.83147, 0, 0.55557, 0.55557, 0, 0.83147, 0.20192, 0, 0.134919, 0.980785, 0, 0.19509, 0.0473772, 0, 0.238181, -0.19509, 0, 0.980785, 0, 0, 0.242847, -0.19509, 0, 0.980785, 0.19509, 0, 0.980785, 0, 0, 1, 0.19509, 0, 0.980785, 0.55557, 0, 0.83147, 0.382683, 0, 0.92388, 0.55557, 0, 0.83147, 0.0473772, 0, 0.238181, 0.0929336, 0, 0.224362, 0.0473772, 0, 0.238181, 0.19509, 0, 0.980785, -0.19509, 0, 0.980785, 0.19509, 0, 0.980785, 0.0473772, 0, 0.238181, 0.55557, 0, 0.83147, 0.224362, 0, -0.0929336, 0.707107, 0.128681, -0.707107, 0.707107, 0, -0.707107, 0.224362, 0, -0.0929336, 0.224362, 0.128681, -0.0929336, 0.707107, 0.128681, -0.707107, 0.707107, 0.128681, -0.707107, 0.224362, 0.128681, -0.0929336, 0.20192, 0.128681, -0.134919, -0.171719, 0, -0.171719, -0.83147, 0.128681, -0.55557, -0.83147, 0, -0.55557, -0.171719, 0, -0.171719, -0.171719, 0.128681, -0.171719, -0.83147, 0.128681, -0.55557, 0.238181, 0, 0.0473772, 0.980785, 0.128681, 0.19509, 0.980785, 0, 0.19509, 0.238181, 0, 0.0473772, 0.238181, 0.128681, 0.0473772, 0.980785, 0.128681, 0.19509, 0.242847, 0, 0, 0.238181, 0.128681, 0.0473772, 0.238181, 0, 0.0473772, 0.242847, 0, 0, 0.242847, 0.128681, 0, 0.238181, 0.128681, 0.0473772, 0.707107, 0, -0.707107, 0.20192, 0.128681, -0.134919, 0.20192, 0, -0.134919, 0.707107, 0, -0.707107, 0.707107, 0.128681, -0.707107, 0.20192, 0.128681, -0.134919, 0.20192, 0, -0.134919, 0.224362, 0.128681, -0.0929336, 0.224362, 0, -0.0929336, 0.20192, 0, -0.134919, 0.20192, 0.128681, -0.134919, 0.224362, 0.128681, -0.0929336, 0.0473772, 0.128681, -0.238181, 0.19509, 0.128681, -0.980785, 0.0929336, 0.128681, -0.224362, 0.19509, 0, -0.980785, 0.0473772, 0.128681, -0.238181, 0.0473772, 0, -0.238181, 0.19509, 0, -0.980785, 0.19509, 0.128681, -0.980785, 0.0473772, 0.128681, -0.238181, 0.0473772, 0, -0.238181, 0.0929336, 0.128681, -0.224362, 0.0929336, 0, -0.224362, 0.0473772, 0, -0.238181, 0.0473772, 0.128681, -0.238181, 0.0929336, 0.128681, -0.224362, -0.0929336, 0.128681, -0.224362, -0.134919, 0.128681, -0.20192, -0.19509, 0.128681, -0.980785, -0.19509, 0, -0.980785, -0.134919, 0.128681, -0.20192, -0.134919, 0, -0.20192, -0.19509, 0, -0.980785, -0.19509, 0.128681, -0.980785, -0.134919, 0.128681, -0.20192, -0.134919, 0, -0.20192, -0.0929336, 0.128681, -0.224362, -0.0929336, 0, -0.224362, -0.134919, 0, -0.20192, -0.134919, 0.128681, -0.20192, -0.0929336, 0.128681, -0.224362, -0.171719, 0.128681, -0.171719, -0.20192, 0.128681, -0.134919, -0.83147, 0.128681, -0.55557, -0.83147, 0, -0.55557, -0.20192, 0.128681, -0.134919, -0.20192, 0, -0.134919, -0.83147, 0, -0.55557, -0.83147, 0.128681, -0.55557, -0.20192, 0.128681, -0.134919, -0.20192, 0, -0.134919, -0.171719, 0.128681, -0.171719, -0.171719, 0, -0.171719, -0.20192, 0, -0.134919, -0.20192, 0.128681, -0.134919, -0.171719, 0.128681, -0.171719, -0.238181, 0.128681, -0.0473772, -0.242847, 0.128681, 0, -1, 0.128681, 0, -1, 0, 0, -0.242847, 0.128681, 0, -0.242847, 0, 0, -1, 0, 0, -1, 0.128681, 0, -0.242847, 0.128681, 0, -0.242847, 0, 0, -0.238181, 0.128681, -0.0473772, -0.238181, 0, -0.0473772, -0.242847, 0, 0, -0.242847, 0.128681, 0, -0.238181, 0.128681, -0.0473772, -0.0473772, 0.128681, 0.238181, 0, 0.128681, 0.242847, -0.19509, 0.128681, 0.980785, -0.20192, 0.128681, 0.134919, -0.171719, 0.128681, 0.171719, -0.707107, 0.128681, 0.707107, 0.0929336, 0.128681, 0.224362, 0.134919, 0.128681, 0.20192, 0.55557, 0.128681, 0.83147, 0.55557, 0, 0.83147, 0.134919, 0.128681, 0.20192, 0.134919, 0, 0.20192, 0.55557, 0, 0.83147, 0.55557, 0.128681, 0.83147, 0.134919, 0.128681, 0.20192, -0.707107, 0, 0.707107, -0.171719, 0.128681, 0.171719, -0.171719, 0, 0.171719, -0.707107, 0, 0.707107, -0.707107, 0.128681, 0.707107, -0.171719, 0.128681, 0.171719, 0.134919, 0, 0.20192, 0.0929336, 0.128681, 0.224362, 0.0929336, 0, 0.224362, 0.134919, 0, 0.20192, 0.134919, 0.128681, 0.20192, 0.0929336, 0.128681, 0.224362, -0.19509, 0, 0.980785, 0, 0.128681, 0.242847, 0, 0, 0.242847, -0.19509, 0, 0.980785, -0.19509, 0.128681, 0.980785, 0, 0.128681, 0.242847, 0, 0, 0.242847, -0.0473772, 0.128681, 0.238181, -0.0473772, 0, 0.238181, 0, 0, 0.242847, 0, 0.128681, 0.242847, -0.0473772, 0.128681, 0.238181, -0.20192, 0, 0.134919, -0.707107, 0.128681, 0.707107, -0.707107, 0, 0.707107, -0.20192, 0, 0.134919, -0.20192, 0.128681, 0.134919, -0.707107, 0.128681, 0.707107)

[node name="circlething" instance=ExtResource("1_rgi73")]
script = ExtResource("2_5m3yn")

[node name="Circle" parent="." index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_g6m0q")

[node name="StaticBody3D" parent="Circle" index="0"]
collision_layer = 3
collision_mask = 3

[node name="Area3D" type="Area3D" parent="." index="1"]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_2gf7o")

[node name="rotation_velocity_timer" type="Timer" parent="." index="2"]
wait_time = 20.0
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="rotation_velocity_timer" to="." method="_on_rotation_velocity_timer_timeout"]
